# drf-auth

./: README.md  cred.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
drf-auth/: asgi.py  settings.py  urls.py  wsgi.py
ps5_games/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
ps5_games/migrations/: 0001_initial.py
